refactor: trim auth and email code; stop logging emailed reset codes
- AuthController: one exception handler instead of five try/catch blocks.
- EmailService: builds the Resend request with Jackson instead of
  hand-written JSON escaping, escapes the username in the email, and only
  logs the reset code when no email provider delivered it.
- Drops ResetPasswordDTO's unused emailOrUsername field and the CORS
  annotations (the frontend always calls its own origin).