@@ -1,5 +1,6 @@
 package com.progressgrid.api.service;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.mail.internet.MimeMessage;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -8,23 +9,27 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.mail.javamail.MimeMessageHelper;
 import org.springframework.stereotype.Service;
+import org.springframework.web.util.HtmlUtils;
 
 import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
-import java.nio.charset.StandardCharsets;
 import java.time.Duration;
+import java.util.List;
+import java.util.Map;
 
 @Service
 public class EmailService {
 
     private static final Logger log = LoggerFactory.getLogger(EmailService.class);
+    private static final String DEFAULT_FROM = "ProgressGrid <onboarding@resend.dev>";
+    private static final String SUBJECT = "ProgressGrid - Password Reset Verification Code: ";
 
     @Value("${resend.api.key:}")
     private String resendApiKey;
 
-    @Value("${resend.from.email:ProgressGrid <onboarding@resend.dev>}")
+    @Value("${resend.from.email:" + DEFAULT_FROM + "}")
     private String resendFromEmail;
 
     @Autowired(required = false)
@@ -33,137 +38,89 @@ public class EmailService {
     @Value("${spring.mail.username:}")
     private String smtpMailFrom;
 
+    @Autowired
+    private ObjectMapper objectMapper;
+
+    /**
+     * Sends through Resend if RESEND_API_KEY is set, otherwise SMTP if MAIL_USERNAME is set. If
+     * neither delivers, the code is written to the log so password reset still works in local
+     * development. With email configured and working, codes never reach the log.
+     */
     public void sendOtpEmail(String toEmail, String username, String otp) {
-        // Prominently log to console for instant visibility during live testing
-        log.info("==========================================================");
-        log.info("[OTP DISPATCH] Recipient: {} | User: {} | Code: {}", toEmail, username, otp);
-        log.info("==========================================================");
-
-        // 1. Prioritize Resend API if API Key is configured
-        if (resendApiKey != null && !resendApiKey.trim().isEmpty() && !resendApiKey.contains("YOUR_RESEND_API_KEY")) {
-            boolean sent = sendViaResend(toEmail, username, otp);
-            if (sent) {
-                return;
-            }
-        }
-
-        // 2. Fallback to SMTP if configured
-        if (mailSender != null && smtpMailFrom != null && !smtpMailFrom.trim().isEmpty()) {
-            sendViaSmtp(toEmail, username, otp);
+        String html = buildEmailHtml(username, otp);
+        if (!resendApiKey.isBlank() && sendViaResend(toEmail, otp, html)) {
             return;
         }
-
-        log.info("[EMAIL SERVICE] Neither RESEND_API_KEY nor SMTP username is configured.");
-        log.info("[EMAIL SERVICE] -> To receive real emails in your inbox, set 'resend.api.key=re_...' in application.properties or set RESEND_API_KEY in environment variables.");
-        log.info("[EMAIL SERVICE] -> For testing right now, use the OTP code above: {}", otp);
+        if (mailSender != null && !smtpMailFrom.isBlank() && sendViaSmtp(toEmail, otp, html)) {
+            return;
+        }
+        log.info("[OTP DISPATCH] Recipient: {} | User: {} | Code: {}", toEmail, username, otp);
+        log.info("No email provider delivered this code. Set RESEND_API_KEY or MAIL_USERNAME and MAIL_PASSWORD to send real emails.");
     }
 
-    private boolean sendViaResend(String toEmail, String username, String otp) {
+    private boolean sendViaResend(String toEmail, String otp, String html) {
         try {
-            log.info("[RESEND] Dispatching email to {} via Resend API...", toEmail);
-            String html = buildEmailHtml(username, otp);
+            String body = objectMapper.writeValueAsString(Map.of(
+                    "from", resendFromEmail.isBlank() ? DEFAULT_FROM : resendFromEmail.trim(),
+                    "to", List.of(toEmail),
+                    "subject", SUBJECT + otp,
+                    "html", html));
 
-            String from = (resendFromEmail != null && !resendFromEmail.trim().isEmpty())
-                    ? resendFromEmail.trim()
-                    : "ProgressGrid <onboarding@resend.dev>";
-
-            String jsonPayload = String.format(
-                    "{\"from\":\"%s\",\"to\":[\"%s\"],\"subject\":\"ProgressGrid - Password Reset Verification Code: %s\",\"html\":%s}",
-                    escapeJson(from),
-                    escapeJson(toEmail),
-                    escapeJson(otp),
-                    toJsonString(html)
-            );
-
-            HttpClient client = HttpClient.newBuilder()
-                    .connectTimeout(Duration.ofSeconds(10))
-                    .build();
-
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create("https://api.resend.com/emails"))
+            HttpRequest request = HttpRequest.newBuilder(URI.create("https://api.resend.com/emails"))
                     .header("Authorization", "Bearer " + resendApiKey.trim())
                     .header("Content-Type", "application/json")
-                    .header("Accept", "application/json")
-                    .POST(HttpRequest.BodyPublishers.ofString(jsonPayload, StandardCharsets.UTF_8))
                     .timeout(Duration.ofSeconds(15))
+                    .POST(HttpRequest.BodyPublishers.ofString(body))
                     .build();
+            HttpResponse<String> response = HttpClient.newBuilder()
+                    .connectTimeout(Duration.ofSeconds(10))
+                    .build()
+                    .send(request, HttpResponse.BodyHandlers.ofString());
 
-            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-
-            if (response.statusCode() >= 200 && response.statusCode() < 300) {
-                log.info("[RESEND] Email successfully delivered to {}! Response: {}", toEmail, response.body());
+            if (response.statusCode() / 100 == 2) {
+                log.info("[RESEND] Email sent to {}", toEmail);
                 return true;
-            } else {
-                log.warn("[RESEND] Resend API returned error {}: {}", response.statusCode(), response.body());
-                return false;
             }
+            log.warn("[RESEND] Resend API returned {}: {}", response.statusCode(), response.body());
         } catch (Exception e) {
-            log.error("[RESEND] Failed to call Resend API: {}", e.getMessage());
+            log.warn("[RESEND] Failed to call Resend API: {}", e.getMessage());
+        }
+        return false;
+    }
+
+    private boolean sendViaSmtp(String toEmail, String otp, String html) {
+        try {
+            MimeMessage message = mailSender.createMimeMessage();
+            MimeMessageHelper helper = new MimeMessageHelper(message, true, "UTF-8");
+            helper.setFrom(smtpMailFrom, "ProgressGrid Security");
+            helper.setTo(toEmail);
+            helper.setSubject(SUBJECT + otp);
+            helper.setText(html, true);
+            mailSender.send(message);
+            log.info("[SMTP] Email sent to {}", toEmail);
+            return true;
+        } catch (Exception e) {
+            log.warn("[SMTP] Could not send email via SMTP: {}", e.getMessage());
             return false;
         }
     }
 
-    private void sendViaSmtp(String toEmail, String username, String otp) {
-        try {
-            MimeMessage message = mailSender.createMimeMessage();
-            MimeMessageHelper helper = new MimeMessageHelper(message, true, "UTF-8");
-
-            helper.setFrom(smtpMailFrom, "ProgressGrid Security");
-            helper.setTo(toEmail);
-            helper.setSubject("ProgressGrid - Password Reset Verification Code: " + otp);
-            helper.setText(buildEmailHtml(username, otp), true);
-
-            mailSender.send(message);
-            log.info("[SMTP] Email successfully sent to {}", toEmail);
-        } catch (Exception e) {
-            log.warn("[SMTP] Could not send email via SMTP ({}). Falling back to console OTP.", e.getMessage());
-        }
-    }
-
     private String buildEmailHtml(String username, String otp) {
+        // The username is user input, so it's escaped before going into the email's HTML.
+        String name = username != null ? HtmlUtils.htmlEscape(username) : "User";
         return "<div style='font-family: Arial, sans-serif; max-width: 520px; margin: 0 auto; padding: 24px; border: 1px solid #e5e7eb; border-radius: 12px; background-color: #ffffff;'>"
                 + "<div style='text-align: center; margin-bottom: 20px;'>"
                 + "<h2 style='color: #4f46e5; margin: 0;'>ProgressGrid</h2>"
                 + "<p style='color: #6b7280; font-size: 14px; margin-top: 4px;'>Password Reset Request</p>"
                 + "</div>"
-                + "<p style='color: #374151; font-size: 15px;'>Hello <strong>" + (username != null ? username : "User") + "</strong>,</p>"
+                + "<p style='color: #374151; font-size: 15px;'>Hello <strong>" + name + "</strong>,</p>"
                 + "<p style='color: #4b5563; font-size: 14px; line-height: 1.5;'>We received a request to reset the password for your ProgressGrid account. Use the verification code below to verify your identity:</p>"
                 + "<div style='text-align: center; margin: 28px 0;'>"
                 + "<span style='display: inline-block; font-size: 32px; font-weight: bold; letter-spacing: 8px; color: #111827; background-color: #f3f4f6; padding: 14px 28px; border-radius: 8px; border: 1px dashed #cbd5e1;'>" + otp + "</span>"
                 + "</div>"
                 + "<p style='color: #6b7280; font-size: 13px;'>This code is valid for <strong>10 minutes</strong>. If you did not make this request, you can safely ignore this email.</p>"
                 + "<hr style='border: none; border-top: 1px solid #f3f4f6; margin: 24px 0;'/>"
-                + "<p style='color: #9ca3af; font-size: 12px; text-align: center;'>ProgressGrid Habit & Workflow Tracker</p>"
+                + "<p style='color: #9ca3af; font-size: 12px; text-align: center;'>ProgressGrid Habit Tracker</p>"
                 + "</div>";
-    }
-
-    private String escapeJson(String s) {
-        if (s == null) return "";
-        return s.replace("\\", "\\\\").replace("\"", "\\\"");
-    }
-
-    private String toJsonString(String s) {
-        if (s == null) return "\"\"";
-        StringBuilder sb = new StringBuilder("\"");
-        for (char c : s.toCharArray()) {
-            switch (c) {
-                case '"' -> sb.append("\\\"");
-                case '\\' -> sb.append("\\\\");
-                case '\b' -> sb.append("\\b");
-                case '\f' -> sb.append("\\f");
-                case '\n' -> sb.append("\\n");
-                case '\r' -> sb.append("\\r");
-                case '\t' -> sb.append("\\t");
-                default -> {
-                    if (c < ' ') {
-                        sb.append(String.format("\\u%04x", (int) c));
-                    } else {
-                        sb.append(c);
-                    }
-                }
-            }
-        }
-        sb.append("\"");
-        return sb.toString();
     }
 }
